--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^8.2",
         "firebase/php-jwt": "^6.11",
-        "google/apiclient": "^2.18",
+        "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
